# mxactions

./: .gitignore  Cargo.toml  LICENSE.md  README.md
contrib/: mxactions.service
docs/superpowers/plans/: 2026-07-14-mxactions.md
docs/superpowers/specs/: 2026-07-14-mxactions-design.md
examples/: hid_test.rs  overlay_preview.rs
src/: action.rs  config.rs  controller.rs  focus.rs  geometry.rs  lib.rs  main.rs  pointer.rs
src/defaults/: command.json
src/hidpp/: mod.rs  mx_master4.rs  protocol.rs
src/overlay/: mod.rs  ring.rs
